# IDU_DVD

./: .dockerignore  .env.example  .env.full.example  .env.min.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README-ru.md  README.md  docker-compose.actions.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build_and_deploy.yml  integration.yml  pr-autofill.yml  release.yml  tests.yml
docs/en/: api.md  architecture.md  configuration.md  pipeline.md
docs/ru/: api.md  architecture.md  configuration.md  pipeline.md
scripts/: upload_docs.ps1
src/: dev_runner.py  main.py
src/admin_service/: __init__.py  router.py
src/admin_service/static/: admin.css  admin.js
src/admin_service/templates/: admin.html  login.html
src/api_clients/: __init__.py  embeddings_client.py  ollama_client.py
src/broker/: __init__.py  events.py  outbox.py  publisher.py
src/common/config/: __init__.py  app_config.py
src/common/db/: minio_client.py  qdrant_client.py  redis_client.py
src/common/logger/: __init__.py  setup.py
src/common/middlewares/: __init__.py  request_logging.py
src/dependencies/: __init__.py  dependencies.py  init_dependencies.py
src/dvd_service/dto/: __init__.py  document.py  node_payload.py  reference.py  search.py  upload.py  user_index.py
src/dvd_service/modules/: doc_parsers.py  hierarchy.py  identity.py  (+6 more)
src/mcp_server/: __init__.py  app.py  server.py
src/system_service/: __init__.py
tests/: conftest.py
tests/integration/: conftest.py  kafka-compose.yaml  test_app_integration.py  test_broker_integration.py  test_embeddings_integration.py  test_library_integration.py  test_ollama_integration.py  test_pipeline_integration.py  test_qdrant_integration.py  test_redis_integration.py  test_references_integration.py  test_search_params_integration.py
tests/unit/: test_admin_ui.py  test_broker.py  test_config.py  test_dependencies.py  test_doc_parsers.py  test_dto.py  test_embeddings_client.py  test_hierarchy.py  test_identity.py  test_library_router.py  test_mcp_server.py  test_minio_client.py  test_ollama_client.py  test_progress.py  test_qdrant_repository.py  test_redis_stores.py  test_references.py  test_routers.py  test_services.py  test_startup_cleanup.py  test_structure.py  test_system.py  test_tagging.py  test_user_documents_router.py  test_user_index_service.py  test_windowing.py
(+13 files in other folders)
