[project]
name = "dvd-idu"
version = "0.1.0"
requires-python = "<3.14,>=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "fastmcp>=3.4.2",
    "httpx>=0.27.0",
    "ipykernel>=7.3.0",
    "minio>=7.2.20",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "structlog>=26.1.0",
    "tqdm>=4.68.3",
    "unstructured[docx]>=0.23.1,<=1.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: tests that require the live local stack (Qdrant, Redis, Ollama); skipped automatically when a service is unavailable",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
