[project]
name = "IDU_DVD"
version = "0.5.0"
requires-python = "<3.14,>=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "fastmcp>=3.4.2",
    "httpx>=0.27.0",
    "ipykernel>=7.3.0",
    "minio>=7.2.20",
    "otteroad>=0.2.2,<0.3",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "structlog>=26.1.0",
    "tqdm>=4.68.3",
    "unstructured[docx]>=0.23.1,<=1.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "fakeredis>=2.36.2",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
# Read/write the canonical version from [project].version above.
version_provider = "pep621"
version_scheme = "pep440"
tag_format = "v$version"
# Also keep the in-code version literal in sync on every bump.
version_files = [
    "src/__version__.py:VERSION",
]
update_changelog_on_bump = true
# Stay in 0.x: breaking changes bump the minor instead of jumping to 1.0.0.
major_version_zero = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: tests that require the live local stack (Qdrant, Redis, Ollama); skipped automatically when a service is unavailable",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
